assets/helm-backup/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: central
